--- a/faculties.html
+++ b/faculties.html
@@ -3,16 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Madrasa Faculties</title>
+  <title>Our Faculties | Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: #0b1d3a;
+      color: #f8f9fa;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    header {
+      background: linear-gradient(90deg, #0d47a1, #1976d2);
+    }
+
+    h2, h4, h6 {
+      color: #fff;
+    }
+
+    .faculty-card {
+      background-color: #10264d;
+      border: none;
+      border-radius: 15px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      padding: 20px 10px;
+      height: 100%;
+    }
+
+    .faculty-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(255, 215, 0, 0.2);
+    }
+
+    .faculty-card img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 3px solid #ffd700;
+    }
+
+    .faculty-about {
+      font-size: 0.9rem;
+      color: #d0d3d8;
+      margin-top: 8px;
+      min-height: 60px;
+    }
+
+    .btn-outline-primary {
+      border-color: #ffd700;
+      color: #ffd700;
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #ffd700;
+      color: #0b1d3a;
+    }
+
+    footer {
+      background: #06142c;
+    }
+  </style>
 </head>
 <body>
 
   <!-- HEADER -->
-  <header class="bg-primary text-white text-center py-4 shadow-sm">
-    <h2 class="mb-0">Our Faculties</h2>
-    <p class="mb-0">Meet our dedicated teaching staff</p>
+  <header class="text-white text-center py-4 shadow-sm">
+    <h2 class="mb-1">Our Faculties</h2>
+    <p class="mb-0 text-light">Meet our dedicated and inspiring teaching staff</p>
   </header>
 
   <!-- FACULTIES SECTION -->
@@ -20,39 +77,49 @@
     <div class="container">
       <div class="row g-4">
 
-        <!-- Faculty Member 1 -->
-        <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Teacher 1" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
-          <h6 class="fw-bold mt-2">SUHAIL P</h6>
-          <small class="text-muted d-block">SWADAR MU'ALLIM</small>
-          <small class="text-muted d-block">7034678818</small>
+        <!-- Faculty 1 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="faculty-card text-center">
+            <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Suhail P">
+            <h6 class="fw-bold mt-3">SUHAIL P</h6>
+            <small class="text-warning d-block">SWADAR MU'ALLIM</small>
+            <small class="d-block text-light">📞 7034678818</small>
+            <p class="faculty-about">A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
+          </div>
         </div>
 
-        <!-- Faculty Member 2 -->
-        <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Teacher 2" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
-          <h6 class="fw-bold mt-2">FIROS FAIZY AK</h6>
-          <small class="text-muted d-block">TEACHER</small>
-          <small class="text-muted d-block">9645134854</small>
+        <!-- Faculty 2 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="faculty-card text-center">
+            <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Firos Faizy">
+            <h6 class="fw-bold mt-3">FIROS FAIZY AK</h6>
+            <small class="text-warning d-block">TEACHER</small>
+            <small class="d-block text-light">📞 9645134854</small>
+            <p class="faculty-about">Dedicated to fostering a love for learning and nurturing discipline through compassionate teaching.</p>
+          </div>
         </div>
 
-        <!-- Faculty Member 3 -->
-        <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/5KGtvHw/library.jpg" alt="Teacher 3" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
-          <h6 class="fw-bold mt-2">DARIMI USTHAD</h6>
-          <small class="text-muted d-block">TEACHER</small>
-          <small class="text-muted d-block">8078055520</small>
+        <!-- Faculty 3 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="faculty-card text-center">
+            <img src="https://i.ibb.co/5KGtvHw/library.jpg" alt="Darimi Usthad">
+            <h6 class="fw-bold mt-3">DARIMI USTHAD</h6>
+            <small class="text-warning d-block">TEACHER</small>
+            <small class="d-block text-light">📞 8078055520</small>
+            <p class="faculty-about">An experienced teacher with deep knowledge of Islamic studies and a calm, inspiring teaching style.</p>
+          </div>
         </div>
 
-        <!-- Faculty Member 4 -->
-        <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Teacher 4" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
-          <h6 class="fw-bold mt-2">FAIROOSUDHEEN ASLAMI</h6>
-          <small class="text-muted d-block">TEACHER</small>
-          <small class="text-muted d-block">9497349254</small>
+        <!-- Faculty 4 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="faculty-card text-center">
+            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Fairoosudheen Aslami">
+            <h6 class="fw-bold mt-3">FAIROOSUDHEEN ASLAMI</h6>
+            <small class="text-warning d-block">TEACHER</small>
+            <small class="d-block text-light">📞 9497349254</small>
+            <p class="faculty-about">Brings enthusiasm and innovation into the classroom, inspiring students to excel in both academics and values.</p>
+          </div>
         </div>
-
-        <!-- Add more faculty members as needed -->
 
       </div>
 
@@ -64,10 +131,9 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small> © 2025 All rights reserved. | Noorussalam Madrasa</small>
+  <footer class="text-white text-center py-3 mt-4">
+    <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
   </footer>
 
 </body>
 </html>
-
