--- a/student-zone.html
+++ b/student-zone.html
@@ -3,31 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Students Zone | Noorussalam Madrasa</title>
+  <title>Student Zone | Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
       background: #f8f9fa;
+      font-family: 'Poppins', sans-serif;
     }
     header {
       background: linear-gradient(135deg, #0b5ed7, #74b9ff);
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    }
+    header h2 {
+      font-weight: 700;
     }
     .class-card {
       background: white;
       border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       text-align: center;
-      padding: 30px 15px;
-      transition: all 0.3s;
+      padding: 30px 10px;
+      transition: all 0.3s ease;
+      cursor: pointer;
     }
     .class-card:hover {
-      transform: translateY(-5px);
+      transform: scale(1.05);
       box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     }
     .class-card i {
@@ -35,12 +39,32 @@
       color: #0b5ed7;
       margin-bottom: 10px;
     }
+    .class-card h5 {
+      color: #0b5ed7;
+      font-weight: 600;
+    }
+    .back-home {
+      display: inline-block;
+      background: #0b5ed7;
+      color: white;
+      padding: 10px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 500;
+      margin-top: 30px;
+      transition: 0.3s;
+    }
+    .back-home:hover {
+      background: #084298;
+      transform: scale(1.05);
+      color: #fff;
+    }
     footer {
       background: #0b5ed7;
       color: white;
       text-align: center;
       padding: 12px 0;
-      margin-top: 50px;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -49,112 +73,102 @@
   <!-- HEADER -->
   <header>
     <h2>Student Zone</h2>
-    <p class="mb-0">Access study materials, notes, and exam resources</p>
+    <p class="mb-0">Access Notes, Homework, and Model Papers for Each Class</p>
   </header>
 
   <!-- CLASS GRID -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row g-4">
-        <!-- 10 Class Cards -->
-        <!-- You can change these to match your Madrasa class names -->
-        <div class="col-md-3 col-sm-6">
-          <a href="class1-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 1</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class2-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 2</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class3-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 3</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class4-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 4</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class5-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 5</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class6-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 6</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class7-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 7</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class8-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 8</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class9-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 9</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class10-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 10</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
+  <div class="container my-5">
+    <div class="row g-4">
+      <!-- Generate 10 class cards -->
+      <div class="col-md-3 col-sm-6">
+        <a href="class1.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-graduation-cap"></i>
+            <h5>Class 1</h5>
+          </div>
+        </a>
       </div>
-
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      <div class="col-md-3 col-sm-6">
+        <a href="class2.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-book"></i>
+            <h5>Class 2</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class3.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-pencil-alt"></i>
+            <h5>Class 3</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class4.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-book-open-reader"></i>
+            <h5>Class 4</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class5.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <h5>Class 5</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class6.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-chalkboard-user"></i>
+            <h5>Class 6</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class7.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-school"></i>
+            <h5>Class 7</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class8.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-user-graduate"></i>
+            <h5>Class 8</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class9.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-bookmark"></i>
+            <h5>Class 9</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <a href="class10.html" class="text-decoration-none">
+          <div class="class-card">
+            <i class="fa-solid fa-trophy"></i>
+            <h5>Class 10</h5>
+          </div>
+        </a>
       </div>
     </div>
-  </section>
+
+    <!-- BACK TO HOME BUTTON -->
+    <div class="text-center">
+      <a href="index.html" class="back-home">
+        <i class="fa-solid fa-house"></i> Back to Home
+      </a>
+    </div>
+  </div>
 
   <!-- FOOTER -->
   <footer>
