--- a/student-zone.html
+++ b/student-zone.html
@@ -3,44 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Students Zone | Noorussalam Madrasa</title>
+  <title>Student Zone | Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       background: #f8f9fa;
+      overflow-x: hidden;
     }
+
+    /* HEADER */
     header {
       background: linear-gradient(135deg, #0b5ed7, #74b9ff);
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      animation: fadeDown 1s ease;
     }
+
+    @keyframes fadeDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* CLASS CARD */
     .class-card {
       background: white;
       border-radius: 15px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.1);
       text-align: center;
       padding: 30px 15px;
-      transition: all 0.3s;
+      transition: all 0.4s ease;
+      opacity: 0;
+      transform: translateY(40px);
     }
+
+    .class-card.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     .class-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+      transform: translateY(-8px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
+
     .class-card i {
       font-size: 40px;
       color: #0b5ed7;
       margin-bottom: 10px;
     }
+
+    /* FOOTER */
     footer {
       background: #0b5ed7;
       color: white;
       text-align: center;
       padding: 12px 0;
-      margin-top: 50px;
+      margin-top: 60px;
+      animation: fadeUp 1s ease;
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .btn-outline-primary {
+      border-color: #0b5ed7;
+      color: #0b5ed7;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      background: #0b5ed7;
+      color: #fff;
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -56,102 +97,33 @@
   <section class="py-5">
     <div class="container">
       <div class="row g-4">
-        <!-- 10 Class Cards -->
-        <!-- You can change these to match your Madrasa class names -->
-        <div class="col-md-3 col-sm-6">
-          <a href="class1-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 1</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class2-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 2</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class3-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 3</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class4-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 4</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class5-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 5</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class6-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 6</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class7-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 7</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class8-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 8</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class9-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 9</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="class10-zone.html" class="text-decoration-none text-dark">
-            <div class="class-card">
-              <i class="fas fa-book-reader"></i>
-              <h5>Class 10</h5>
-              <p class="text-muted small">Notes, Homework, Papers</p>
-            </div>
-          </a>
-        </div>
+        <!-- CLASS CARDS -->
+        <script>
+          const totalClasses = 10;
+          document.addEventListener("DOMContentLoaded", () => {
+            const row = document.querySelector('.row.g-4');
+            for (let i = 1; i <= totalClasses; i++) {
+              const col = document.createElement('div');
+              col.className = "col-md-3 col-sm-6";
+              col.innerHTML = `
+                <a href="class${i}-zone.html" class="text-decoration-none text-dark">
+                  <div class="class-card">
+                    <i class="fas fa-book-reader"></i>
+                    <h5>Class ${i}</h5>
+                    <p class="text-muted small">Notes, Homework, Papers</p>
+                  </div>
+                </a>`;
+              row.appendChild(col);
+            }
+          });
+        </script>
       </div>
 
+      <!-- BACK TO HOME BUTTON -->
       <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+        <a href="index.html" class="btn btn-outline-primary px-4">
+          ← Back to Home
+        </a>
       </div>
     </div>
   </section>
@@ -160,6 +132,23 @@
   <footer>
     <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
   </footer>
+
+  <!-- SCROLL ANIMATION SCRIPT -->
+  <script>
+    const cards = document.getElementsByClassName("class-card");
+
+    function showOnScroll() {
+      for (let card of cards) {
+        const rect = card.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 50) {
+          card.classList.add("show");
+        }
+      }
+    }
+
+    window.addEventListener("scroll", showOnScroll);
+    window.addEventListener("load", showOnScroll);
+  </script>
 
 </body>
 </html>
